# shooter2_c

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  conan_linux_profile  conanfile.txt  justfile  win.toolchain.cmake
bot_src/: bot_actions.c  bot_actions.h  bot_actions_def.h  bot_mem.c  bot_mem.h  minimal_player_info.h
bot_src/aggro/: .gitignore  bot_actions.c  bot_actions.h  bot_actions_def.h  bot_mem  bot_mem.h  justfile  main.c  map.h  math.rs  minimal_player_info.h  minimal_state_info.h  player.h  weapon.h
bot_src/bot_lib/: Cargo.toml  build.rs  index.html  justfile
bot_src/bot_lib/.cargo/: config.toml
bot_src/bot_lib/src/: lib.rs
bot_src/bot_lib/src/c/: include  map.h  minimal_player_info.h  player.c  projectile.c  weapon.h
bot_src/bot_mem/: Cargo.toml  Makefile.toml  build.rs  justfile  rustfmt.toml
bot_src/bot_mem/src/: lib.rs
bot_src/bot_mem/src/c/: bot_actions.c  bot_mem.c  minimal_state_info.h  player.h  projectile.h
bot_src/c/: bot_actions.c  bot_actions.h  bot_actions_def.h  minimal_player_info.h  minimal_state_info.h  weapon.h
bot_src/scared/: Cargo.toml  build.rs  justfile
bot_src/scared/src/: lib.rs
bot_src/scared/src/c/: bot_actions.h  bot_actions_def.h  bot_mem.h  minimal_player_info.h
bot_src/simple/: bot_actions.c  bot_actions.h  bot_actions_def.h  bot_mem.c  bot_mem.h  justfile  main.c  minimal_player_info.h
maps/: untitled.custom
net_render/: Cargo.toml
net_render/.cargo/: config.toml
net_render/src/: main.rs
src/: bot_actions_def.h  bot_def.h  bot_handler.h  bot_wasm.h  bots.c  bots.h  camera.c  camera.h  config.c  config.h  file_ext.c  file_ext.h  game_mode.c  game_mode.h  game_state.c  game_state.h  hashmap.c  hashmap.h  hashset.c  hashset.h  in_game_state.c  in_game_state.h  input.c  input.h  main.c  main_menu_state.c  main_menu_state.h  map.c  map.h  math.c  math.h  minimal_player_info.h  minimal_state_info.h  net.c  net.h  net_info.h  player.c  player.h  player_ability.c  player_ability.h  (+15 more)
src/bots/: Makefile  simple.c
src/game_modes/: Makefile  deathmatch.c  gun_game.c  justfile  math.c  minimal_state_info.h  player_ability.h  weapon.c
src/game_modes/capture_the_flag/: Cargo.toml  build.rs  build.sh
src/game_modes/capture_the_flag/.cargo/: config.toml
src/game_modes/capture_the_flag/c/: drawing_api.h  minimal_state_info.h  wrapper.h
src/game_modes/capture_the_flag/src/: lib.rs  math.rs  mem.rs
src/include/: raylib.h
src/wasm_deps/: math_wasm.c
tiled/: shooter2_c_map.js  untitled.tmx
