[package]
name = "net_render"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
overflow-checks = false
lto = "fat"
panic = "abort"
debug = true
codegen-units = 1

[dependencies]
once_cell = { version = "1" }
macroquad = { version = "0.3", default-features = false }
tokio = { version = "1", default-features = false, features = ["net", "rt", "rt-multi-thread", "io-util", "sync"] }
