[package]
name = "bot_handler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
overflow-checks = false
lto = "fat"
panic = "abort"
debug = false
codegen-units = 1

[dependencies]
once_cell = { version = "1" }
wasmer = { version = "2", default-features = false, features = ["sys", "default-cranelift", "default-universal"] }

[build-dependencies]
bindgen = { version = "0.60", default-features = false }
cc = { version = "1", features = ["parallel"] }
