[package]
name = "bot_mem"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[profile.dev]
debug = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
overflow-checks = false
lto = "fat"
panic = "abort"
codegen-units = 1
debug = false
strip = true

[dependencies]
once_cell = { version = "1", default-features = false }

[build-dependencies]
bindgen = { version = "0.60", default-features = false }
