[package]
name = "scared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
overflow-checks = false
lto = "fat"
debug = 0
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
panic = "abort"
debug = 0
strip = true

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bot_mem = { path = "../bot_mem/" }
